updated base.html to index.html

--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
       <img src="/img/logo4.jpg" style="border-radius: 50%; margin-right: 1em; cursor: pointer;" width="50px">
-      <a class="navbar-brand" href="base.html">ShanuRestaurant</a>
+      <a class="navbar-brand" href="index.html">ShanuRestaurant</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -31,7 +31,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link " aria-current="page" href="/base.html">Home</a>
+            <a class="nav-link " aria-current="page" href="/index.html">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/product.html">Product</a>
@@ -126,7 +126,7 @@
        
           <h5>Navigation Links</h5>
        
-            <li style="list-style: none;"><a href="/base.html" >Home</a></li>
+            <li style="list-style: none;"><a href="/index.html" >Home</a></li>
             <li style="list-style: none;"><a href="/product.html" >Product</a></li>
             <li style="list-style: none;"><a href="/service-1.html" >Services</a></li>
             <li style="list-style: none;"><a href="/contact.html" >Contact Us</a></li>
