--- a/service-1.html
+++ b/service-1.html
@@ -81,10 +81,10 @@
   <div class="container marketing my-4">
 
     <!-- Three columns of text below the carousel -->
-    <div class="row d-flex justify-content-around ">
+    <div class="row d-flex justify-content-around service-card">
 
       <div class="col-lg-4 border-4 border-danger">
-        <img class="mt-2" src="/img/delivery.png" width="150px" height="150px" style="border-radius: 50%;">
+        <img class="mt-2 ps-3 rounded-circle" src="/img/delivery.png" width="170px" height="150px" >
         <h4 class="mt-3">Free Home Delivery</h4>
         <p>If the parcel is booked for Mumbai it will be delivered for free of cost no extra charges for door delivery.
           <br> We are the only transporter doing free Door deliveries for Nasik.
@@ -94,7 +94,7 @@
       </div><!-- /.col-lg-4 -->
 
       <div class="col-lg-4">
-        <img class="mt-2" src="/img/catering2.png" width="180px" height="150px" style="border-radius: 50%;">
+        <img class="mt-2 rounded-circle" src="/img/catering2.png" width="180px" height="150px">
         <h4 class="mt-3">Catering</h4>
         <p>Shanu’s Catering prioritizes the satisfaction of our clients, and we do whatever we can to ensure that your
           event, whether it’s your wedding or a private event, is hassle-free and has great food that reflects your
@@ -103,8 +103,8 @@
       </div><!-- /.col-lg-4 -->
 
       <div class="col-lg-4 ">
-        <img class="mt-2" src="/img/service2.png" width="150px" height="150px" style="border-radius: 50%;">
-        <h4 class="mt-3">Support 24/7</h4>
+        <img class="mt-2 ps-2 rounded-circle" src="/img/service2.png" width="165px" height="150px" >
+        <h4 class="mt-4">Support 24/7</h4>
         <p class="my-2">
           <abbr title="location">
             <i class="fas fa-map-marker-alt i-color mr-3"></i></abbr> &nbsp; Mumbai
@@ -114,7 +114,7 @@
         <p class="mt-2">
           <abbr title="location">
             <i class="fas fa-envelope i-color mr-3"></i></abbr> &nbsp;
-          shanu.restaurant.support@gmail.com
+          shanu.restaurant@gmail.com
         </p>
 
         <p><a class="btn btn-dark btn-sm" href="#">View details »</a></p>
