--- a/service-2.html
+++ b/service-2.html
@@ -64,7 +64,7 @@
 
     <div class="container marketing">
 
-        <h3 class="my-3 heading-h3">Other Services</h3>
+        <h3 class="my-3 heading-h3 srvice2-h3">Other Services</h3>
         <!-- <h3 class="my-4 border-bottom border-dark d-inline-block border-4"></h3> -->
         <!-- START THE FEATURETTES -->
         <hr class="featurette-divider">
